feat: [Problem7] 친구 관계를 바탕으로 Map을 생성하는 로직 추가